--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.3.29</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
